# magnolia

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  reset_db.bat  reset_db.sh
backend/: Cargo.toml
backend/migrations/: 001_user_accounts.sql  002_known_devices.sql  002_sessions.sql  003_email_verifications.sql  004_password_resets.sql  005_invites.sql  006_register_applications.sql  007_posts.sql  008_post_contents.sql  009_post_tags.sql  010_comments.sql  011_media.sql  012_favourites.sql  013_theme_settings.sql  014_site_config.sql  015_email_settings.sql  016_email_logs.sql  017_site_pages.sql  018_conversations.sql  019_conversation_members.sql  020_messages.sql  021_message_deliveries.sql  022_messaging_preferences.sql  023_user_blocks.sql  024_conversation_favourites.sql  025_message_attachments.sql  026_conversation_backgrounds.sql  027_audit_logs.sql  028_calls.sql  029_call_participants.sql  030_link_previews.sql  031_global_call_participants.sql  032_server_identity.sql  033_server_connections.sql  034_discovery_hints.sql  035_federation_users.sql  036_user_federation_settings.sql  037_user_federation_rules.sql  038_federation_post_refs.sql  039_user_external_bans.sql  (+9 more)
backend/src/: database.rs  embedded.rs  events.rs  lib.rs  main.rs  proxy_rate.rs  routes.rs  service.rs  services.rs  turn.rs
backend/src/config/: settings.rs
backend/src/crypto/: encryption.rs  generate_keys.rs  mod.rs  signature.rs
backend/src/federation/: client.rs  handlers.rs  handshake.rs  hub.rs  identity.rs  messaging.rs  mod.rs  models.rs  posts_sync.rs  relay.rs  repo.rs  routes.rs  signing.rs  sync.rs
backend/src/handlers/: admin.rs  auth.rs  calling.rs  comment.rs  events.rs  global_call.rs  link_preview.rs  media.rs  messaging.rs  mod.rs  post.rs  proxy_user.rs  setup.rs  static_files.rs  tag.rs  theme.rs  ws.rs
backend/src/handlers/email_html/: invite_email.rs  mod.rs  reset_email.rs
backend/src/logging/: config.rs  context.rs  events.rs  mod.rs
backend/src/middleware/: auth.rs  mod.rs  proxy_auth.rs  rate_limit.rs  security_audit.rs  security_headers.rs
backend/src/utils/: crypto.rs  email.rs  encryption.rs  extractors.rs  mod.rs  password.rs  thumbnail.rs
backend/templates/: base.html
client/: README.md  hmac.md  session.md
client/csharp/: MagnoliaClient.Tests.cs  MagnoliaClient.Tests.csproj  MagnoliaClient.cs  MagnoliaClient.csproj  README.md
client/go/: README.md  go.mod  magnolia.go  magnolia_test.go
client/python/: README.md  magnolia_client.py  test_magnolia.py
client/rust/: Cargo.toml
client/typescript/: README.md  magnolia.test.ts  magnolia.ts  package.json  tsconfig.json
common/: Cargo.toml
common/src/: lib.rs
common/src/errors/: app_error.rs
common/src/models/: call.rs  comment.rs  conversation.rs  conversation_favourite.rs  email_log.rs  email_settings.rs  event.rs  favourite.rs  global_call.rs  invite.rs  media.rs  message.rs  message_attachment.rs  messaging.rs  mod.rs  post.rs  post_tag.rs  proxy_user.rs  register_application.rs  site_config.rs  site_page.rs  stun_server.rs  theme.rs  user.rs
common/src/repositories/: call_repository.rs  comment_repository.rs  conversation_background_repository.rs  conversation_favourite_repository.rs  conversation_repository.rs  email_log_repository.rs  email_settings_repository.rs  event_repository.rs  favourite_repository.rs  global_call_repository.rs  invite_repository.rs  media_repository.rs  message_repository.rs  messaging_repository.rs  mod.rs  post_repository.rs  post_tag_repository.rs  proxy_user_repository.rs  register_application_repository.rs  site_config_repository.rs  site_page_repository.rs  stun_server_repository.rs  theme_repository.rs  user_repository.rs
common/src/schemas/: admin.rs  auth.rs  calling.rs  comment.rs  email_settings.rs  event.rs  media.rs  messaging.rs  mod.rs  post.rs  proxy_user.rs  site_config.rs  site_page.rs  tag.rs  theme.rs
doc/: admin_web_interface_guide.md  user_web_interface_guide.md
installer/linux/: build.sh  cross-build.bat  cross-build.sh  magnolia_server.service
installer/linux/rpm/: build-rpm.sh  cross-build-rpm.bat  cross-build-rpm.sh
installer/linux/rpm/scripts/: post  postun  preun
installer/linux/scripts/: config  postinst  postrm  prerm  templates
installer/macos/: build-pkg.sh  com.magnolia.server.plist
installer/windows/: build-inno.bat  magnolia.iss
web_frontend/css/: styles.css
web_frontend/js/: admin.js  api.js  auth.js  call-e2e-worker.js  calling.js  directory.js  e2e.js  events.js  global-call.js  linkpreview.js  main.js  messaging.js  posts.js  profile.js  proxy.js  search.js  security.js  theme.js  utils.js
