[package]
name = "magnolia_server"
version = "1.0.0"
edition = "2024"
description = "Magnolia anti-social platform server"
license = "CC-BY-NC-SA-4.0"

[dependencies]
magnolia-common = { path = "../common"}
# Web framework
axum = { version = "0.8.8", features = ["multipart", "ws"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
tower = {version = "0.5.3", features = ["util", "limit"]}
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs", "compression-gzip"] }
tower_governor = "0.8.0"
time = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "postgres", "any", "migrate", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "1.0.0"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Password hashing
argon2 = "0.5"
rand_core = "0.10.0"
rand_crypto = { version = "=0.10.0", package = "rand" }
rand = "0.9.2"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
regex = "1"

# Scheduler
tokio-cron-scheduler = "0.15.1"

async-trait = "0.1"
reqwest = { version = "0.13.1", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Configuration
dotenvy = "0.15"

# Interactive password prompt (create_admin binary)
rpassword = "7"

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# Base64 encoding
base64 = "0.22.1"

# Image processing
image = "0.25.9"

# Templating
tera = "1.19"
once_cell = "1.19"

# Asset embedding
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"
aes-gcm = { version = "=0.11.0-rc.3", features = ["aes"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
ml-dsa = { version = "=0.1.0-rc.7", features = [] }
ml-kem = "=0.3.0-rc.2"

[[bin]]
name = "service_ctl"
path = "src/bin/service_ctl.rs"

[[bin]]
name = "create_admin"
path = "src/bin/create_admin.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

# Windows service support
[target.'cfg(windows)'.dependencies]
windows-service = "0.8.0"
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }

# Linux .deb package configuration
[package.metadata.deb]
name = "magnolia_server"
maintainer = "magnolia_server Team"
copyright = "2024 magnolia_server"
license-file = ["../LICENSE", "0"]
extended-description = "Self-hosted social media platform with messaging, calling, and media support."
depends = "debconf"
section = "web"
priority = "optional"
assets = [
 ["target/release/magnolia_server", "/usr/local/bin/", "755"],
 ["target/release/service_ctl", "/usr/local/bin/magnolia_server-ctl", "755"],
 ["target/release/create_admin", "/usr/local/bin/magnolia-create-admin", "755"],
 ["../installer/linux/magnolia_server.service", "/lib/systemd/system/", "644"],
]
conf-files = ["/etc/magnolia/magnolia.env"]
maintainer-scripts = "../installer/linux/scripts/"

# Linux .rpm package configuration (cargo-generate-rpm)
[package.metadata.generate-rpm]
name = "magnolia_server"
license = "see LICENSE"
summary = "Magnolia social platform server"
description = "Self-hosted social media platform with messaging, calling, and media support."
post_install_script = "../installer/linux/rpm/scripts/post"
pre_uninstall_script = "../installer/linux/rpm/scripts/preun"
post_uninstall_script = "../installer/linux/rpm/scripts/postun"
assets = [
 { source = "../target/release/magnolia_server", dest = "/usr/local/bin/magnolia_server", mode = "755" },
 { source = "../target/release/service_ctl", dest = "/usr/local/bin/magnolia_server-ctl", mode = "755" },
 { source = "../target/release/create_admin", dest = "/usr/local/bin/magnolia-create-admin", mode = "755" },
 { source = "../installer/linux/magnolia_server.service", dest = "/usr/lib/systemd/system/magnolia_server.service", mode = "644" },
]
