[package]
name = "magnolia_client"
version = "1.0.0"
edition = "2024"
description = "Magnolia anti-social platform client"
license = "CC-BY-NC-SA-4.0"

[dependencies]
magnolia-common = { path = "../../common"}

tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

async-trait = "0.1"
reqwest = { version = "0.13.1", features = ["json"] }
hmac = "0.12"

dotenvy = "0.15"
image = "0.25.9"
aes-gcm = { version = "=0.11.0-rc.3", features = ["aes"] }
